--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -264,10 +264,11 @@ h1, h2, h3, h4, h5, h6
 .tip
 	display: inline-block
 	vertical-align: middle
-	margin-right: 5px
-	font-size: 8px
-	width: 12px
-	height: 12px
+	margin-right: 3px
+	font-size: 9px
+	width: 14px
+	height: 14px
+	line-height: 12px
 	padding: 2px
 	background-color: #ed691f
 	border-radius: 50%
