--- a/src/sass/components/_basket.sass
+++ b/src/sass/components/_basket.sass
@@ -6,6 +6,8 @@
 			text-align: center
 	&__cat-title
 		text-align: center
+		display: inline-block
+		vertical-align: middle
 		+sm
 			font-size: 21px
 			margin: 0 -15px
