--- a/src/templates/bmw-parts-all.html
+++ b/src/templates/bmw-parts-all.html
@@ -6,12 +6,12 @@
 
    <main class="main">
 
-      <section class="screen">
+      <section class="screen screen--parts">
          <div class="container">
-            <div class="screen__col col-l">
+            <div class="screen__col">
                {% include "partials/_sidebar.html" %}
             </div>
-            <div class="screen__col col-r">
+            <div class="screen__col">
 
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
