--- a/src/templates/partials/_address.html
+++ b/src/templates/partials/_address.html
@@ -1,4 +1,4 @@
-<section class="address">
+<section class="address address--home">
    <div class="container">
       <h2 class="address__title title-lg title-lg--sb">ТОРГОВАЯ СЕТЬ "ВЕХА"</h2>
       <div class="address__inner">
