--- a/src/sass/components/_address.sass
+++ b/src/sass/components/_address.sass
@@ -160,8 +160,13 @@
 			left: auto
 			right: 10px
 			
+	&--home
+		+sm
+			padding: 20px 0 35px
 	&--contacts
 		padding: 30px 0
+		+sm
+			padding-bottom: 0
 		.address__title
 			color: #000
 		.address__col
@@ -171,9 +176,15 @@
 			vertical-align: middle
 			&:nth-child(1)
 				width: 34.4%
+				+sm
+					width: 100%
 			&:nth-child(2)
 				width: 63.5%
 				margin-left: 15px
+				+sm
+					width: 100%
+					margin-left: 0
+					margin-bottom: 15px
 		.address__block-street
 			font-family: $PS
 		
