--- a/src/sass/components/_personal.sass
+++ b/src/sass/components/_personal.sass
@@ -2,6 +2,8 @@
 	&__inner
 		margin-bottom: 45px
 		text-align: center
+		+sm
+			margin-bottom: 30px
 		&:nth-of-type(2)
 			margin-bottom: 0
 			text-align: left
@@ -97,6 +99,8 @@
 	&__man-title
 		+lg
 			padding-top: 15px
+		+xs
+			font-size: 21px
 	&__man-info
 		float: left
 		width: (190/490 * 100%)
