--- a/src/templates/foreign-cars.html
+++ b/src/templates/foreign-cars.html
@@ -8,10 +8,10 @@
 
       <section class="screen screen--foreign">
          <div class="container">
-            <div class="screen__col col-l">
+            <div class="screen__col">
                {% include "partials/_sidebar.html" %}
             </div>
-            <div class="screen__col col-r">
+            <div class="screen__col">
 
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
