--- a/src/sass/_fonts.sass
+++ b/src/sass/_fonts.sass
@@ -3,10 +3,10 @@
 +font(ProximaNova-Regular, ProximaNova-Regular)
 +font(ProximaNova-Light, ProximaNova-Light)
 +font(ProximaNova-Extrabld, ProximaNova-Extrabld)
-
-
++font(Russia-Light, Russia-Light)
 
 $PS: "ProximaNova-Semibold", Arial, sans-serif
 $PR: "ProximaNova-Regular", Arial, sans-serif
 $PL: "ProximaNova-Light", Arial, sans-serif
 $PEB: "ProximaNova-Extrabld", Arial, sans-serif
+$RL: "Russia-Light", Arial, sans-serif
