--- a/src/sass/components/_all.sass
+++ b/src/sass/components/_all.sass
@@ -1,5 +1,6 @@
 @import header
 @import sidebar
+@import dropdown
 @import offers-product
 @import read
 @import search
@@ -10,3 +11,4 @@
 @import personal
 @import basket
 @import pay-table
+@import review
