--- a/src/sass/components/_search.sass
+++ b/src/sass/components/_search.sass
@@ -60,11 +60,11 @@
 		right: 0
 		top: 0
 		height: 46px
-		line-height: 58px
 		width: 50px
 		background-color: transparent
 		.icon-search
-			vertical-align: initial
+			position: absolute
+			+vcenter
 			font-size: 20px
 			+tr(fill .25s)
 		&:hover .icon-search
