--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,7 @@
    <div class="container" style="display: flex; flex-direction: column;">
       <div style="margin-bottom: 25px" class="title-lg">Страницы:</div>
       <a style="margin-bottom: 15px;" href="home.html">Главная</a>
+      <a style="margin-bottom: 15px;" href="product.html">Продукт</a>
       <a style="margin-bottom: 15px;" href="basket.html">Корзина</a>
       <a style="margin-bottom: 15px;" href="personal-area.html">Личный кабинет</a>
       <a style="margin-bottom: 15px;" href="personal-area-2.html">Личный кабинет 2</a>
