--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -34,11 +34,13 @@
 			+sm
 				padding: 0
 	&__top
-		padding-bottom: 22px
-		padding-top: 12px
+		display: flex
+		justify-content: space-between
+		align-items: center
+		padding-top: 5px
+		padding-bottom: 25px
 		font-size: 0
 		white-space: nowrap
-		+clr
 		+lg
 			padding-top: 20px
 			padding-left: 10px
@@ -46,15 +48,43 @@
 			text-align: center
 		+sm
 			padding: 0
-	&__payment, &__location
+		&-col
+			position: relative
+			display: inline-block
+			vertical-align: middle
+			padding: 0 25px
+			&:first-child::after
+				display: none
+			&:last-child
+				padding-top: 5px
+				padding-right: 0
+				margin-left: auto
+			&:nth-child(2)
+				padding-top: 5px
+				padding-right: 0
+				padding-left: 50px
+			&::after
+				content: ''
+				position: absolute
+				top: 50%
+				left: 0
+				transform: translateY(-50%)
+				background: #e7e7e7
+				width: 1px
+				height: 37px
+	&__social-link
 		display: inline-block
 		vertical-align: middle
-	&__payment
-		+lg
-			margin-right: 20px
-		+md
-			display: none
-
+		margin-left: 20px
+		font-size: 16px
+		.icon
+			fill: #44668f
+	&__city-label
+		display: inline-block
+		vertical-align: middle
+		color: #40403e
+		font-size: 15px
+		
 .logo
 	display: block
 	&__img
@@ -71,48 +101,38 @@
 			margin: 0 auto
 
 .contacts
-	font-size: 16px
 	line-height: 1
+	font-size: 0
 	&__street
+		display: inline-block
+		vertical-align: middle
+		padding-right: 20px
 		font-family: $PL
 		color: $black-light
 	&__phone
+		display: inline-block
+		vertical-align: middle
 		text-decoration: none
-		font-family: $PS
 		color: $black-light
-	&:before, &:after
+		font-size: 23px
+		font-family: $PS
+	&--header
+		padding: 0 30px 0 0
+	&--header &__phone
+		padding-left: 19px
+	&--header &__street
+		position: relative
+		font-size: 16px
+	&--header &__street::after
 		content: ''
 		position: absolute
 		top: 50%
+		right: 0
 		transform: translateY(-50%)
 		background: #e7e7e7
 		width: 1px
 		height: 37px
-	&::before
-		left: 13px
-		+lg
-			left: 0
-		+sm
-			display: none
-	&::after
-		right: 0
-		+xs
-			display: none
-	&--header
-		position: relative
-		display: inline-block
-		vertical-align: middle
-		padding-left: 25px
-		padding-right: 12px
-		+lg
-			padding-left: 10px
-			padding-right: 10px
-		.contacts__phone
-			+lg
-				display: block
-				text-align: center
-		+sm
-			display: none
+		
 	&--footer
 		margin: 15px 0
 		+md
@@ -126,20 +146,20 @@
 	font-size: 0
 	&__item
 		display: inline-block
+		vertical-align: text-bottom
 		position: relative
 		& + &
-			margin-left: 17px
+			margin-left: 26px
 			+sm
 				margin-left: 24px
-		&:hover .icon
-			fill: $blue
 		.icon
 			font-size: 22px
-			fill: #000
+			fill: #40403e
 			+tr(fill .25s)
+		&--user
+			+s('user')
 	&__count
 		color: $white
-		font-family: $PL
 		font-size: 11px
 		width: 16px
 		height: 16px
@@ -150,21 +170,10 @@
 		background-color: #0078bf
 		text-align: center
 		border-radius: 50%
-	&__count--present
+		font-family: $RL
+	&__count--cart
 		background-color: #ed691f
-	&--header
-		padding-left: 15px
-		display: inline-block
-		vertical-align: middle
-		+lg
-			padding-left: 20px
-		+sm
-			position: absolute
-			left: 0
-			bottom: 18px
-			z-index: 1
-			width: 100%
-			padding: 0
+		
 .menu
 	font-size: 0
 	text-align: center
@@ -209,92 +218,3 @@
 			border-bottom-color: transparent
 			color: $blue
 
-.loc
-	&::after
-		content: ''
-		position: absolute
-		top: 50%
-		right: 0
-		transform: translateY(-50%)
-		background: #e7e7e7
-		width: 1px
-		height: 37px
-		+sm
-			display: none
-	&__text
-		display: inline-block
-		vertical-align: middle
-		color: #40403e
-		border-bottom: 1px dashed #d1d1d0
-		font-size: 15px
-	&__current
-		display: inline-block
-		vertical-align: middle
-		margin-right: 7px
-		text-decoration: none
-		+lg
-			display: block
-			text-align: center
-			margin-right: 0
-		+sm
-			text-align: left
-		.icon
-			display: inline-block
-			vertical-align: middle
-			margin-right: 7px
-			font-size: 20px
-	&__current:hover &__text
-		color: $blue
-		border-bottom-color: $blue
-	&__all
-		display: inline-block
-		vertical-align: middle
-		padding: 0 15px
-		position: relative
-		color: #0078bf
-		font-family: $PL
-		font-size: 15px
-		+sm
-			padding: 5px 0 0
-		&::before
-			content: ''
-			position: absolute
-			top: 50%
-			left: 3px
-			transform: translateY(-50%)
-			background: #e7e7e7
-			width: 1px
-			height: 18px
-			+lg
-				display: none
-		&:hover
-			text-decoration: none
-	&--header
-		position: relative
-		display: inline-block
-		vertical-align: middle
-		padding-left: 11px
-		font-size: 0
-		+lg
-			padding-left: 0
-		+sm
-			float: right
-			text-align: left
-			
-	&--footer
-		text-align: left
-		&::after
-			+md
-				display: none
-		+lg
-			text-align: center
-		+md
-			display: inline-block
-			vertical-align: middle
-		.loc__current
-			+md
-				display: inline-block
-				vertical-align: middle
-		.loc__all
-			 +sm
-				 padding: 0
