--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -501,4 +501,7 @@
 			&:nth-child(2)
 				width: calc(100% - 155px)
 		&-breadcrumbs
-			padding: 25px 0 15px
+			padding: 25px 0 8px
+			
+.main--product
+	padding-bottom: 15px
