--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -3,6 +3,8 @@
 	padding: 40px 0
 	+md
 		padding: 25px 0
+	&__row
+		font-size: 0
 	&__col
 		float: left
 		+sm
@@ -72,6 +74,21 @@
 			left: 10px
 			+s(dev)
 			
+	&__address-link
+		display: inline-block
+		vertical-align: middle
+		padding-left: 14px
+		border-left: 1px solid #e7e7e7
+		margin-left: 15px
+		height: 20px
+		line-height: 20px
+		.link-default
+			text-transform: none
+			font-size: 15px
+	&__payment
+		margin-bottom: 40px
+		+s('payment')
+		
 .socials
 	font-size: 0
 	&__item
@@ -109,3 +126,4 @@
 			vertical-align: middle
 			margin-bottom: 0
 			margin-left: 10px
+	
