--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -135,12 +135,18 @@
 		
 	&--footer
 		margin: 15px 0
+		font-size: 16px
 		+md
 			margin: 0
 			display: inline-block
 			vertical-align: middle
 		+sm
 			margin: 15px 0
+	&--footer &__phone
+		font-size: 16px
+	&--footer &__street
+		padding-right: 0
+		color: #000
 
 .userbar
 	font-size: 0
@@ -148,6 +154,7 @@
 		display: inline-block
 		vertical-align: text-bottom
 		position: relative
+		background-color: transparent
 		& + &
 			margin-left: 26px
 			+sm
@@ -218,3 +225,65 @@
 			border-bottom-color: transparent
 			color: $blue
 
+.login-popup
+	visibility: hidden
+	opacity: 0
+	position: absolute
+	top: 150%
+	right: 65%
+	padding: 30px
+	border: 1px solid #e7e7e7
+	background-color: #f9f9f9
+	border-radius: 4px
+	font-size: 14px
+	text-align: center
+	z-index: 100
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15)
+	&::before, &::after
+		content: ''
+		position: absolute
+		width: 0
+		height: 0
+		border-style: solid
+	&::before
+		z-index: 2
+		top: -11px
+		right: 16px
+		border-width: 0 0 14px 14px
+		border-color: transparent transparent #f9f9f9 transparent
+	&::after
+		border-width: 0 0 13px 14px
+		border-color: transparent transparent #e7e7e7 transparent
+		top: -13px
+		right: 15px
+		z-index: 1
+	&.is-open
+		visibility: visible
+		opacity: 1
+		animation: modalComeIn .3s cubic-bezier(0.39, 0.58, 0.57, 1)
+	&__title
+		margin-bottom: 15px
+	&__link
+		color: #0078bf
+		text-decoration: underline
+		font-size: 15px
+		&:hover
+			text-decoration: none
+	&__btn
+	&__enter
+		margin-top: 15px
+		
+// animation for modal
+@keyframes modalComeIn
+	0%
+		visibility: hidden
+		opacity: 0
+		transform: scale(.8, .8)
+
+	65.5%
+		transform: scale(1.03, 1.03)
+
+	100%
+		visibility: visible
+		opacity: 1
+		transform: scale(1, 1)
