--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,44 +1,55 @@
 <footer class="footer">
-	<div class="container">
-		<div class="footer__col">
-				<a class="logo logo--footer" href="#">
-					<img class="logo__img" src="img/logo.png" alt="logo"></a>
-			<div class="footer__copyright">Межрегиональная ассоциация «ВЕХА» <br>&copy; 1992 — 2017</div>
-			</div>
-			<div class="footer__col">
-				<div class="footer__menu">
-					<ul>
-						<li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">О магазине</a></li>
-						<li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Веха-клуб</a></li>
-						<li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Каталог товаров</a></li>
-						<li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#"> Доставка и оплата</a></li>
-					</ul>
-					<ul>
-						<li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Гарантии</a></li>
-						<li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Сотрудничество</a></li>
-						<li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Контакты</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="footer__col">
-				<div class="loc loc--footer">
-					<a class="loc__current" href="#!">{{ mixins.icon('balloon-sm') }} <span class="loc__text">Самара</span></a>
-					<a class="loc__all" href="#!">адреса магазинов</a>
-				</div>
-				<div class="contacts contacts--footer">
-					ул. Грозненская, 65, 
-					<a class="contacts__phone" href="tel:+78462791919">+7 (846) 279-19-19</a>
-				</div>
-				<div class="socials socials--footer">
-					<a class="socials__item" href="#">{{mixins.icon('vk')}}</a>
-					<a class="socials__item" href="#">{{mixins.icon('od')}}</a>
-					<a class="socials__item" href="#">{{mixins.icon('fb')}}</a>
-					<a class="socials__item" href="#">{{mixins.icon('in')}}</a>
-					<a class="socials__item" href="#">{{mixins.icon('p')}}</a>
-				</div>
-				<div class="footer__dev">
-					Трудились над сайтом <a class="footer__dev-link" href="#">АКТИКОМ</a>
-				</div>
-			</div>
-		</div>
-	</footer>
+   <div class="container">
+      <div class="footer__col">
+         <a class="logo logo--footer" href="#">
+            <img class="logo__img" src="img/logo.png" alt="logo"></a>
+         <div class="footer__copyright">Межрегиональная ассоциация «ВЕХА» <br>&copy; 1992 — 2017</div>
+      </div>
+      <div class="footer__col">
+         <div class="footer__menu">
+            <ul>
+               <li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">О магазине</a></li>
+               <li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Веха-клуб</a></li>
+               <li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Каталог товаров</a>
+               </li>
+               <li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#"> Доставка и оплата</a>
+               </li>
+            </ul>
+            <ul>
+               <li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Гарантии</a></li>
+               <li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Сотрудничество</a></li>
+               <li class="footer__menu-item"><a class="footer__menu-link border-b-link" href="#">Контакты</a></li>
+            </ul>
+         </div>
+      </div>
+      <div class="footer__col">
+         <div class="footer__row">
+            <div class="dropdown js-dropdown dropdown--footer">
+               <div class="dropdown__visible js-dropdown-open">
+                  <div class="dropdown__text">Самара</div>
+                  {{ mixins.icon('balloon-sm') }}</div>
+               <div class="dropdown__list">
+                  <ul>
+                     <li><a href="#!">Самара</a></li>
+                     <li><a href="#!">Москва</a></li>
+                     <li><a href="#!">Самара</a></li>
+                     <li><a href="#!">Москва</a></li>
+                  </ul>
+               </div>
+            </div>
+            <div class="footer__address-link">
+               <a href="#!" class="link-default">адреса магазинов</a>
+            </div>
+         </div>
+
+         <div class="contacts contacts--footer">
+            <span class="contacts__street">ул. Грозненская, 65,</span>
+            <a class="contacts__phone" href="tel:+78462791919">+7 (846) 279-19-19</a>
+         </div>
+         <div class="footer__payment"></div>
+         <div class="footer__dev">
+            Трудились над сайтом <a class="footer__dev-link" href="#">АКТИКОМ</a>
+         </div>
+      </div>
+   </div>
+</footer>
